# podio_benchmarking

./: .gitignore  CMakeLists.txt  README.md  benchmark_environment.yaml
python/: analyze_read.py  analyze_write.py  make_benchmark_report.py  utils.py
reading_benchmark/: CMakeLists.txt  read_benchmark.cpp  read_benchmark_lcio.cpp
results/k4SimDelphes/: README.md  delphes_card_IDEA.tcl  higgs_recoil_config.yaml  report_config.yaml  root_compare_config.yaml  run_benchmarks.py  run_benchmarks_vchep.sh  run_higgs_recoil_bench.sh  run_read_benchmark.py  run_write_benchmark.py
results/k4SimDelphes/Higgs_recoil_at_ILD/: README.md  delphes_card_ILD.tcl
results/k4SimDelphes/Higgs_recoil_at_ILD_root-6.20.04/: README.md
results/k4SimDelphes/Higgs_recoil_at_ILD_root-6.22.06/: README.md
results/k4SimDelphes/Higgs_recoil_at_ILD_sio_zlib/: README.md
results/k4SimDelphes/chep_final_Higgs_recoil/: README.md
results/k4SimDelphes/chep_final_ee_Z_bbbar/: README.md
results/k4SimDelphes/chep_final_ee_Z_tautau/: README.md
results/k4SimDelphes/compare_root_versions/: README.md
results/k4SimDelphes/ee_Z_bbbar/: README.md  ee_Z_bbbar.cmd
results/k4SimDelphes/ee_Z_bbbar_root-6.20.04/: README.md
results/k4SimDelphes/ee_Z_bbbar_root-6.22.06/: README.md
results/k4SimDelphes/ee_Z_bbbar_sio_zlib/: README.md
results/k4SimDelphes/ee_Z_tautau/: README.md  ee_Z_tautau.cmd
results/k4SimDelphes/ee_Z_tautau_root-6.20.04/: README.md
results/k4SimDelphes/ee_Z_tautau_root-6.22.06/: README.md
results/k4SimDelphes/higgs_recoil_plots_benchmarks/: README.md
(+3 files in other folders)
